# book-real-world-haskell

./: .travis.yml  README.md  book-real-world-haskell.cabal  run.sh
.dir/: dir.yml
examples/appA/: text.ghci
examples/ch00/: KMinima.hs
examples/ch01/: WC.hs  basics.ghci  types.ghci
examples/ch02/: Assign.hs  RoundToEven.hs  Take.hs  assign.ghci  assign.py  cd.ghci  ch02.basics.ghci  func.ghci  myDrop.ghci  myDrop.hs  myDrop.py  shadowing.ghci  shortCircuit.hs  usingtypes.ghci
examples/ch03/: AlgebraicVector.hs  AltCustomer.hs  BadIndent.hs  BadPattern.hs  BadTree.hs  BogusPattern.hs  BookStore.hs  Bool.hs  Braces.hs  Distinction.hs  GlobalVariable.hs  GoodIndent.hs  Guard.hs  Indentation.hs  Intersperse.hs  Lending.hs  ListADT.hs  LocalFunction.hs  MySecond.hs  NestedLets.hs  Nullable.hs  Roygbiv.hs  ShapeUnion.hs  Tree.hs  Tree.java  Tuple.hs  add.ghci  add.hs  algebraicvector.ghci  badpattern.ghci  bookstore.ghci  error.ghci  indent.ghci  intersperse.ghci  letwhere.hs  list.ghci  listadt.ghci  nestedlets.ghci  nullable.ghci  realRoots.ghci  (+4 more)
examples/ch04/: Adler32.hs  Adler32.java  EfficientList.hs  Filter.hs  Fold.hs  IntParse.hs  InteractWith.hs  Lambda.hs  Map.hs  Partial.hs  Plus.hs  RunLength.hs  SplitLines.hs  SuffixTree.hs  Sum.hs  ch04.exercises.ghci  ch04.exercises.hs  ch04.filter.ghci  ch04.list.ghci  ch04.map.ghci  dlts.ghci  dlts.hs  filter.cpp  fold.ghci  infix.ghci  intparse.c  intparse.ghci  lambda.ghci  map.c  partial.ghci  rle.hs  rms.c  rms.hs  splitlines.ghci  suffix.ghci  thunky.ghci
examples/ch05/: Concat.hs  Exporting.hs  Main.hs  Prettify.hs  PrettyJSON.hs  PrettyStub.hs  PutJSON.hs  Setup.hs  SimpleJSON.hs  SimpleResult.hs  Trouble.hs  mypretty.cabal  prettify.ghci  prettyjson.ghci  prettystub.ghci  putjson.ghci  result.js  simplejson.ghci  trouble.ghci
examples/ch06/: AutomaticDerivation.hs  BrokenClass.hs  ClassResult.hs  DataEither.hs  JSONClass.hs  JSONClassExport.hs  Monomorphism.hs  Newtype.hs  NewtypeDiff.hs  Overlap.hs  SimpleClass.hs  brokenClass.ghci  colorderived.hs  derived.ghci  eqclasses.ghci  read.ghci  (+8 more)
examples/ch26/: BloomFilter.hs  License.txt  Setup.lhs  rwh-bloomfilter.cabal  sizings.ghci
examples/ch26/BloomFilter/: Easy.hs  Hash.hs  Internal.hs  Mutable.hs
examples/ch26/cbits/: lookup3.c  lookup3.h
examples/ch26/configs/: inconsistent.cabal
examples/ch26/examples/: BloomCheck.hs  WordTest.hs  bloomCheck.ghci
(+339 files in other folders)
